--- a/Game.of.Life.JS/test/SpecRunner.html
+++ b/Game.of.Life.JS/test/SpecRunner.html
@@ -11,6 +11,8 @@
   <script src="lib/jasmine-2.1.2/jasmine-html.js"></script>
   <script src="lib/jasmine-2.1.2/boot.js"></script>
 
+  <script src="../scripts/libs/underscore.js"></script>
+
   <!-- include source files here... -->
   <script src="../scripts/CellState.js"></script>
   <script src="../scripts/Cell.js"></script>
